Fix:Fixed the alignment of navbar button

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -89,7 +89,6 @@
 @media (max-width: 768px) {
   
   .menu_icon {
-    
     cursor: pointer;
     display: block;
   }
@@ -130,7 +129,8 @@
   }
 
   .nav_elements ul li {
-    margin-right: 2.1vw;
-    margin-top: 1.375rem;
+    margin-right: 5.8vw;
+    margin-top: 0.375rem;
+    margin-bottom: 0.375rem;
   }
 }
